--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/read": "^0.0.29",
         "cli-progress": "^3.11.2",
         "esbuild": "^0.17.0",
+        "prettier": "^2.8.3",
         "read": "^2.0.0",
         "typescript": "^4.9.4"
     }
