fix: add browser flag and ignore node modules for building

--- a/.presetterrc.json
+++ b/.presetterrc.json
@@ -3,6 +3,7 @@
     "@lumeweb/presetter-kernel-module-preset"
   ],
     "config": {
-        "official": true
+        "official": true,
+        "browser": true
     }
 }
