--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "dependencies": {
         "@lumeweb/libkernel": "^0.1.0-develop.12",
         "@lumeweb/libpeerdiscovery": "^0.1.0-develop.1"
+    },
+    "browser": {
+        "node-fetch": false,
+        "stream": false,
+        "formdata-polyfill": false
     }
 }
